--- a/frontend/src/views/Embeddings.module.css
+++ b/frontend/src/views/Embeddings.module.css
@@ -1,13 +1,34 @@
 .section {
-  margin: 10px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* min-width: 230px;
-  height: 467px; */
+  margin: 0 0 10px;
 }
 
 .wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.title {
+  width: 780px;
+  height: 42px;
+  font-size: 1.8rem;
+  font-weight: 500;
+  color: #383838;
+  background-color: var(--title-bg-color);
+  text-align: center;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 0 0 10px;
+  padding: 0px 1rem;
+  border-radius: 4px;
+}
+
+.card {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -15,7 +36,6 @@
   padding: 14px 12px;
   border: 2px solid var(--contentBox-border-color);
   border-radius: 6px;
-  min-width: 230px;
   height: 467px;
 }
 
@@ -26,6 +46,6 @@
 }
 
 .img {
-  width: 340px;
+  width: 333px;
   margin: 0 12px;
 }
