--- a/frontend/src/views/Embeddings.module.css
+++ b/frontend/src/views/Embeddings.module.css
@@ -7,6 +7,7 @@
 }
 
 .wrapper {
+  width: 780px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -36,6 +37,7 @@
   padding: 14px 12px;
   border: 2px solid var(--contentBox-border-color);
   border-radius: 6px;
+  width: 385px;
   height: 467px;
 }
 
